--- a/css/base.css
+++ b/css/base.css
@@ -42,7 +42,6 @@ body {
 	animation: fadeIn 1s ease-in-out;
     font-family: 'Montserrat', sans-serif;
 	color: var(--primary-color);
-	padding-top: 20px;
 }
 
 img {
@@ -84,6 +83,9 @@ img.center {
   margin: 0 auto;
   min-height: calc(100vh - 120px); 
   text-align: center;
+  padding: 4rem 2rem; 
+  padding-top: calc(var(--header-height) + 20px);
+  
 }
 
 .site-footer{
